# org-browser-extension

./: de.haukerehfeld.chrome_tabs.json  pyproject.toml  server.py  server.sh
extension/: manifest.json  tabs.js
