[tool.poetry]
name = "chrome-tabs"
version = "0.1.0"
description = ""
authors = ["Hauke Rehfeld <git@haukerehfeld.de>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
psutil = "^5.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
